# paimon-cpp

./: CMakeLists.txt  LICENSE  PaimonConfig.cmake.in  README.md
benchmark/: CMakeLists.txt  benchmark_case_mor_read.cpp  benchmark_case_pk_write.cpp  benchmark_case_read.cpp  benchmark_case_write.cpp  benchmark_helpers.cpp  benchmark_helpers.h  benchmark_suite.cpp  benchmark_suite.h  cli_option_parsing.h  cli_option_parsing_test.cpp  read_write_benchmark.cpp
build_support/: lsan-suppressions.txt  run_clang_tidy.py  ubsan-suppressions.txt
build_support/iwyu/: iwyu.sh  iwyu_tool.py
ci/scripts/: build_paimon.sh
cmake_modules/: BuildUtils.cmake  DefineOptions.cmake  FindArrowAlt.cmake  FindAvroAlt.cmake  FindGTestAlt.cmake  FindLZ4Alt.cmake  FindORCAlt.cmake  FindPackageUtils.cmake  FindProtobufAlt.cmake  FindRE2Alt.cmake  FindRapidJSONAlt.cmake  FindSnappyAlt.cmake  FindTBBAlt.cmake  FindZLIBAlt.cmake  FindbenchmarkAlt.cmake  FindfmtAlt.cmake  FindglogAlt.cmake  FindzstdAlt.cmake  SetupCxxFlags.cmake  ThirdpartyToolchain.cmake  arrow.diff  san-config.cmake
docs/: code-style.md
docs/source/: build_system.rst  building.rst  conf.py  user_guide.rst
docs/source/api/: commit.rst  global_index.rst  read.rst  scan.rst
docs/source/examples/: benchmark.rst  index.rst
docs/source/user_guide/: global_index.rst  manifest_cache.rst  prefetch.rst  read.rst  write.rst
examples/: CMakeLists.txt
include/paimon/: api.h  defs.h  executor.h  read_context.h  record_batch.h  result.h  scan_context.h  write_context.h
include/paimon/cache/: cache.h
include/paimon/catalog/: catalog.h  identifier.h
include/paimon/data/: blob.h
include/paimon/format/: parquet.h
include/paimon/fs/: file_system.h
include/paimon/global_index/: global_index_writer.h
include/paimon/io/: buffered_input_stream.h  byte_array_input_stream.h  data_input_stream.h
include/paimon/memory/: bytes.h  memory_segment.h
include/paimon/predicate/: full_text_search.h  literal.h  vector_search.h
include/paimon/reader/: count_reader.h
include/paimon/table/source/: data_split.h  table_read.h
include/paimon/utils/: special_field_ids.h
src/paimon/: CMakeLists.txt
src/paimon/common/: defs.cpp
src/paimon/common/catalog/: catalog_context.h
src/paimon/common/compression/: block_compression_factory_test.cpp  block_decompressor.cpp
src/paimon/common/data/: abstract_binary_writer.cpp  abstract_binary_writer.h  binary_array.cpp  binary_array_test.cpp  binary_array_writer.cpp  binary_array_writer.h  binary_map.h  binary_row.cpp  binary_row_test.cpp  binary_row_writer.cpp  binary_row_writer.h  binary_section.h  binary_string.h  blob.cpp  blob_defs.h  blob_descriptor.cpp  blob_descriptor.h  blob_descriptor_test.cpp  blob_test.cpp  blob_utils.cpp  blob_utils.h  blob_utils_test.cpp  blob_view_struct.cpp  blob_view_struct.h  blob_view_struct_test.cpp  decimal.cpp  decimal_test.cpp  generic_row.h  generic_row_test.cpp  internal_row.cpp
src/paimon/common/executor/: default_executor_test.cpp  executor.cpp  future.h
src/paimon/common/file_index/: CMakeLists.txt
src/paimon/common/fs/: external_path_provider.h  external_path_provider_test.cpp  file_system.cpp  file_system_test.cpp
src/paimon/common/global_index/: CMakeLists.txt  global_index_utils_test.cpp  offset_global_index_reader.cpp
src/paimon/common/io/: buffered_input_stream.cpp  byte_array_input_stream.cpp  cache_input_stream.h  cache_input_stream_test.cpp  data_input_stream.cpp  data_output_stream.cpp  data_output_stream.h  memory_segment_output_stream.cpp  memory_segment_output_stream.h  offset_input_stream.cpp  offset_input_stream.h  offset_input_stream_test.cpp
src/paimon/common/logging/: logging.cpp  logging_test.cpp
src/paimon/common/memory/: bytes.cpp  memory_segment.cpp  memory_segment.h  memory_segment_test.cpp  memory_segment_utils.cpp  memory_segment_utils.h  memory_slice.h  memory_slice_output.cpp
src/paimon/common/predicate/: like.cpp  literal.cpp  literal_converter.cpp  predicate_test.cpp
src/paimon/common/reader/: blob_view_resolving_batch_reader.cpp  blob_view_resolving_batch_reader.h  blob_view_resolving_batch_reader_test.cpp  data_evolution_array_test.cpp  (+2 more)
src/paimon/core/: core_options.cpp  core_options.h  core_options_test.cpp  snapshot_test.cpp
test/inte/: append_compaction_inte_test.cpp  blob_table_inte_test.cpp  global_index_test.cpp  read_inte_test.cpp  scan_and_read_inte_test.cpp  scan_inte_test.cpp  write_and_read_inte_test.cpp  write_inte_test.cpp
(+433 files in other folders)
